# win_twins

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/ingest/: ingest_events.py  ingest_games.py  ingest_players.py  ingest_teams.py
transform/: dbt_project.yml  profiles.yml
transform/models/staging/: sources.yml  stg_events.sql  stg_games.sql  stg_players.sql  stg_teams.sql
