[project]
name = "win-twins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pybaseball>=2.2.7",
    "requests>=2.33.1",
]
