[project]
name = "win-twins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pybaseball>=2.2.7",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "dbt-duckdb>=1.10.1",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "sqlfluff>=4.1.0",
    "sqlfluff-templater-dbt>=4.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # import sorting
  "UP", # pyupgrade
  "B",  # bugbear
]

[tool.ruff.format]
quote-style = "double"

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "dbt"
max_line_length = 100

[tool.sqlfluff.templater.dbt]
project_dir = "transform"
profiles_dir = "transform"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.layout.long_lines]
ignore_comment_lines = true
